@@ -1,25 +1,26 @@
 package gmbh.dtap.refine.client;
 
 import gmbh.dtap.refine.api.RefineException;
-import org.apache.http.HttpEntity;
+import org.apache.commons.io.IOUtils;
 import org.apache.http.HttpResponse;
-import org.apache.http.StatusLine;
 import org.json.JSONException;
 import org.junit.Before;
+import org.junit.Rule;
 import org.junit.Test;
+import org.junit.rules.ExpectedException;
 import org.junit.runner.RunWith;
-import org.mockito.Mock;
 import org.mockito.runners.MockitoJUnitRunner;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.nio.charset.Charset;
 import java.util.Arrays;
 
-import static org.apache.commons.io.IOUtils.toInputStream;
+import static gmbh.dtap.refine.test.HttpMock.mockHttpResponse;
+import static org.apache.http.entity.ContentType.APPLICATION_JSON;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.fail;
-import static org.mockito.Mockito.when;
 
 /**
  * Unit Tests for {@link ExpressionPreviewResponseHandler}.
@@ -29,79 +30,57 @@ import static org.mockito.Mockito.when;
 @RunWith(MockitoJUnitRunner.class)
 public class ExpressionPreviewResponseHandlerTest {
 
-   private ExpressionPreviewResponseHandler responseHandler;
-   @Mock private HttpResponse httpResponse;
-   @Mock private HttpEntity httpEntity;
-   @Mock private StatusLine statusLine;
+   private static final URI BASE_URL = URI.create("http://localhost:3333/");
+   private static final Charset UTF_8 = Charset.forName("UTF-8");
+
+   @Rule public ExpectedException thrown = ExpectedException.none();
+
+   private ExpressionPreviewResponseHandler expressionPreviewResponseHandler;
 
    @Before
    public void setUp() throws MalformedURLException {
-      URL baseUrl = new URL("http://localhost:3333/");
-      responseHandler = new ExpressionPreviewResponseHandler(new ResponseParser(baseUrl));
+      expressionPreviewResponseHandler = new ExpressionPreviewResponseHandler(new ResponseParser(BASE_URL.toURL()));
+   }
+
+
+   @Test
+   public void should_throw_exception_when_response_status_is_500() throws IOException {
+      HttpResponse httpResponse = mockHttpResponse(500);
+
+      thrown.expect(RefineException.class);
+      expressionPreviewResponseHandler.handleResponse(httpResponse);
    }
 
    @Test
-   public void should_throw_exception_on_unexpected_status() throws IOException {
-      when(statusLine.getStatusCode()).thenReturn(500);
-      when(httpResponse.getStatusLine()).thenReturn(statusLine);
+   public void should_throw_exception_when_response_body_is_no_json() throws IOException, URISyntaxException {
+      String responseBody = IOUtils.toString(getClass().getResource("/responseBody/no-json.txt").toURI(), UTF_8);
+      HttpResponse httpResponse = mockHttpResponse(200, APPLICATION_JSON, responseBody);
 
-      try {
-         responseHandler.handleResponse(httpResponse);
-         fail("expected exception not thrown");
-      } catch (RefineException expectedException) {
-         assertThat(expectedException.getMessage()).isEqualTo("Unexpected response status: 500");
-      }
+      thrown.expect(RefineException.class);
+      expressionPreviewResponseHandler.handleResponse(httpResponse);
    }
 
    @Test
-   public void should_throw_exception_on_malformed_json() throws IOException, JSONException {
-      String expectedResponseBody = "That's a bingo!";
+   public void should_return_error_when_response_is_negative() throws IOException, URISyntaxException {
+      String expectedMessage = "This is the error message.";
+      String responseBody = IOUtils.toString(getClass().getResource("/responseBody/code-error.json").toURI(), UTF_8);
+      HttpResponse httpResponse = mockHttpResponse(200, APPLICATION_JSON, responseBody);
 
-      when(statusLine.getStatusCode()).thenReturn(200);
-      when(httpEntity.getContent()).thenReturn(toInputStream(expectedResponseBody, "UTF-8"));
-      when(httpResponse.getStatusLine()).thenReturn(statusLine);
-      when(httpResponse.getEntity()).thenReturn(httpEntity);
-      
-      try {
-         responseHandler.handleResponse(httpResponse);
-         fail("expected exception not thrown");
-      } catch (RefineException expectedException) {
-         assertThat(expectedException.getMessage()).startsWith("Parser error:");
-      }
+      ExpressionPreviewResponse expressionPreviewResponse = expressionPreviewResponseHandler.handleResponse(httpResponse);
+      assertThat(expressionPreviewResponse).isNotNull();
+      assertThat(expressionPreviewResponse.isSuccessful()).isFalse();
+      assertThat(expressionPreviewResponse.getMessage()).isEqualTo(expectedMessage);
    }
 
    @Test
-   public void should_return_successful_response() throws IOException, JSONException {
-      String responseBody = "{\"code\":\"ok\",\"results\":[\"7\",\"5\",\"5\",\"9\"]}";
+   public void should_return_successful_response() throws IOException, JSONException, URISyntaxException {
+      String responseBody = IOUtils.toString(getClass().getResource("/responseBody/expression-preview.json").toURI(), UTF_8);
+      HttpResponse httpResponse = mockHttpResponse(200, APPLICATION_JSON, responseBody);
 
-      when(statusLine.getStatusCode()).thenReturn(200);
-      when(httpResponse.getStatusLine()).thenReturn(statusLine);
-      when(httpResponse.getEntity()).thenReturn(httpEntity);
-      when(httpEntity.getContent()).thenReturn(toInputStream(responseBody, "UTF-8"));
-
-      ExpressionPreviewResponse expressionPreviewResponse = responseHandler.handleResponse(httpResponse);
+      ExpressionPreviewResponse expressionPreviewResponse = expressionPreviewResponseHandler.handleResponse(httpResponse);
       assertThat(expressionPreviewResponse).isNotNull();
       assertThat(expressionPreviewResponse.isSuccessful()).isTrue();
       assertThat(expressionPreviewResponse.getMessage()).isNull();
       assertThat(expressionPreviewResponse.getExpressionPreviews()).isEqualTo(Arrays.asList("7", "5", "5", "9"));
-   }
-
-   @Test
-   public void should_return_error_response_with_message() throws IOException, JSONException {
-      String expectedMessage = "For input string: \"foo\"";
-      String responseBody = "{\n" +
-            "    \"code\": \"error\",\n" +
-            "    \"message\": \"For input string: \\\"foo\\\"\"" +
-            "}";
-
-      when(statusLine.getStatusCode()).thenReturn(200);
-      when(httpResponse.getStatusLine()).thenReturn(statusLine);
-      when(httpResponse.getEntity()).thenReturn(httpEntity);
-      when(httpEntity.getContent()).thenReturn(toInputStream(responseBody, "UTF-8"));
-
-      ExpressionPreviewResponse expressionPreviewResponse = responseHandler.handleResponse(httpResponse);
-      assertThat(expressionPreviewResponse).isNotNull();
-      assertThat(expressionPreviewResponse.isSuccessful()).isFalse();
-      assertThat(expressionPreviewResponse.getMessage()).isEqualTo(expectedMessage);
    }
 }
